[package]
name = "axum-js-fetch"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 3
 
[dependencies]
axum = { version = "0.6", default-features = false }
tower = { version = "0.4.13", features = ["util"] }
http = "0.2.9"
web-sys = { version = "0.3.64", features = ["Request", "Response"] }
gloo-net = "0.4.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.37", features = ["futures-core-03-stream"] }
js-sys = "0.3.64"
futures-lite = "1.13.0"
wasm-streams = "0.3.0"
bytes = "1.4.0"
http-body = "0.4.5"
async-channel = "1.9.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.6", default-features = false, features = ["query", "json"] }
