[package]
name = "axum-js-fetch"
version = "0.3.0"
edition = "2021"
description = "Axum integration for the javascript Fetch API"
repository = "https://github.com/seanaye/axum-js-fetch"
readme = "README.md"
license = "MIT"

[dependencies]
axum = { version = "0.7.0", default-features = false }
tower = { version = "0.4.13", features = ["util"], default-features = false}
http = "1.0.0"
web-sys = { version = "0.3.67", features = ["Request", "Response","RequestInit"] }
gloo-net = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.40", features = ["futures-core-03-stream"] }
js-sys = "0.3.67"
futures-lite = "2.2.0"
wasm-streams = "0.4"
bytes = "1.5.0"
http-body = "1.0.0"
async-channel = "2.1.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.4", default-features = false, features = ["query", "json"] }
wasm-bindgen-test = "0.3.37"

