[package]
name = "deno-example"
version = "0.1.0"
authors = ["Sean Aye <hello@seanaye.ca>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0.2.87"
axum-js-fetch = { path = "../../" }
axum = { version = "0.7.0", default-features = false, features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
web-sys = "0.3.67"
futures-lite = "2.2.0"
wasm-bindgen-futures = { version = "0.4.40", features = ["futures-core-03-stream"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


