[package]
name = "leptos_counter_isomorphic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
axum-js-fetch = {path = "../.."}
axum = { version = "0.7", default-features = false}
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
cfg-if = "1"
broadcaster = { version = "1" }
console_log = "1"
console_error_panic_hook = "0.1"
lazy_static = "1"
leptos = {  git="https://github.com/sjud/leptos", features = ["nightly"] }
leptos_axum = { git="https://github.com/sjud/leptos",  default-features = false, features = ["wasm"] }
leptos_meta = { git="https://github.com/sjud/leptos", features = ["nightly"] }
leptos_router = { git="https://github.com/sjud/leptos", features = ["nightly"] }
log = "0.4"
once_cell = {version = "1.18"}
gloo-net = { version = "0.5.0", features = ["http"] }
wasm-bindgen = "0.2.87"
serde = { version = "1", features = ["derive"] }
server_fn = {git="https://github.com/sjud/leptos"}
simple_logger = "4.3"
tracing = { version = "0.1", optional = true }
web-sys = { version = "0.3.67", features = ["Request", "Response","RequestInit"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
wasm-bindgen-futures = { version = "0.4.40", features = ["futures-core-03-stream"] }
leptos_axum = { git="https://github.com/sjud/leptos", default-features = false, features = ["wasm"] }


[features]
default = ["nightly"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate", 
	"leptos_router/hydrate"
	 ]
ssr = [
	"dep:tower",
	"dep:tower-http",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
nightly = ["leptos/nightly", "leptos_router/nightly"]



[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "counter_isomorphic"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
# When NOT using cargo-leptos this must be updated to "." or the counters will not work. The above warning still applies if you do switch to cargo-leptos later.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg	
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "src/styles/tailwind.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:0"
# The port to use for automatic reload monitoring
reload-port = 3001
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
